--- a/BlueConsole/App.xaml
+++ b/BlueConsole/App.xaml
@@ -3,7 +3,8 @@
     x:Class="BlueConsole.App"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:BlueConsole">
+    xmlns:local="clr-namespace:BlueConsole"
+    UserAppTheme="Light">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
