--- a/BlueConsole/AppShell.xaml
+++ b/BlueConsole/AppShell.xaml
@@ -4,11 +4,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BlueConsole"
+    xmlns:views="clr-namespace:BlueConsole.Views"
     Title="BlueConsole">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <ShellContent Title="Home" ContentTemplate="{DataTemplate views:ScanPage}" />
 
 </Shell>
