--- a/BlueConsole/AppShell.xaml
+++ b/BlueConsole/AppShell.xaml
@@ -5,8 +5,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BlueConsole"
     xmlns:views="clr-namespace:BlueConsole.Views"
-    Title="BlueConsole">
+   
+    Title="BlueConsole"
+    FlyoutWidth="300">
 
+    <FlyoutItem Title="Cats" />
     <ShellContent Title="Home" ContentTemplate="{DataTemplate views:ScanPage}" />
 
 </Shell>
